src/objects/Master_Automation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Scope_Inquiry_Edit_Request_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DO NOT CHECK FOR ORG SETTING
If checked, that user/profile can update the Request Filed field on Scope Inquiries after the value has been set.</inlineHelpText>
        <label>Scope Inquiry - Edit Request Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationRulesEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ValidationRulesEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkflowRulesEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WorkflowRulesEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Master Automation</label>
</CustomObject>